[package]
name = "bitcask"
version = "0.1.0"
authors = ["Zack Kollar <rallokkcaz@gmail.com>"]
edition = "2018"

[dependencies]
crc = "2.0.0"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]


# Commit and push hooks
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "precommit-hook", "run-cargo-test", "run-cargo-fmt"] 